Fix crash when reading some contact cards.